Update README.md
more readme stuff